tests/fixtures/positive/naming/FunctionNaming.kt
package com.example.naming

fun Bad_Function() {
    println("bad")
}

fun AnotherBadFunction() {
    println("also bad")
}
