tests/fixtures/negative/naming/VariableMaxLength.kt
package naming

fun example() {
    val reasonableVariableName = 42
}
